<resources>
    <string name="app_name">Vrihad</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One time Password on this mobile number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="or">OR</string>
    <string name="enter_the_otp_sent_to_91_80675_50678">Enter the OTP sent to +91 80675-50678</string>
    <string name="verify_and_proceed">Verify and Proceed</string>
    <string name="good_morning">Good Morning</string>
    <string name="search_for_quizes">Search for quizes</string>
    <string name="skip">Skip</string>
    <string name="my_wallet">My wallet</string>
    <string name="logout">Logout</string>
    <string name="personal_details">Personal details</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="profile_details">Profile Details</string>
    <string name="_50">₹ 50</string>
    <string name="entry_cost">Entry Cost</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correct">Correct</string>
    <string name="congratulations_for_getting_all_the_answers_correct">Congratulations for getting all the answers correct</string>
    <string name="play_again">Play Again</string>
    <string name="cards_will_come_from_database">Cards will come from database</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_bio">Add Bio</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>
</resources>